2008-07-19  Aidan Kehoe  <kehoea@parhasard.net>

	* descr-text.el (describe-property-list): Move the (require
	'hyper-apropos) call to top level, this isn't the only function
	that uses the relevant face. 
	(describe-char): Wrap the Unihan field descriptions if they are
	longer than the windows width minus 50.
	Rename the created buffer to reflect the character's position as
	well as its value. 

2008-07-07  Aidan Kehoe  <kehoea@parhasard.net>

	Patch to make it up to the device-specific code whether
	various Lisp functions should be called during device creation,
	not relying on the startup code to decide this. Also, rename
	initial-window-system to initial-device-type (which makes more
	sense in this scheme), always set it. 

	* startup.el (command-line):
	Use initial-device-type, not initial-window-system; just call
	#'make-device, leave the special behaviour to be done the first
	time a console type is initialised to be decided on by the
	respective console code.

	* x-init.el (x-app-defaults-directory): Declare that it should be
	bound.
	(x-define-dead-key): Have the macro take a DEVICE argument.
	(x-initialize-compose): Have the function take a DEVICE argument,
	and use it when checking if various keysyms are available on the
	keyboard.
	(x-initialize-keyboard): Have the function take a DEVICE argument,
	allowing device-specific keyboard initialisation.
	(make-device-early-x-entry-point-called-p): New.
	(make-device-late-x-entry-point-called-p): New.  Rename
	pre-x-win-initted, x-win-initted.
	(make-device-early-x-entry-point): Rename init-pre-x-win, take the
	call to make-x-device out (it should be called from the
	device-creation code, not vice-versa).
	(make-device-late-x-entry-point): Rename init-post-x-win, have it
	take a DEVICE argument, use that DEVICE argument when working out
	what device-specific things need doing. Don't use
	create-console-hook in core code.
	* x-win-xfree86.el (x-win-init-xfree86): Take a DEVICE argument;
	use it. 